@@ -225,7 +225,7 @@ Single
 4 1 32 50 0 14 12 0.0000 4 150 420 2775 3450 18pf\001
 4 1 32 50 0 14 12 0.0000 4 120 210 2775 2925 C1\001
 4 1 32 50 0 14 12 0.0000 4 75 105 7500 2775 *\001
-4 1 32 50 0 14 12 0.0000 4 135 1260 7650 3300 See note [7]\001
+4 1 32 50 0 14 12 0.0000 4 135 1260 7650 3300 See note [8]\001
 4 1 32 50 0 14 12 0.0000 4 120 210 7350 2850 R2\001
 4 1 32 50 0 14 12 0.0000 4 120 630 8475 2700 LED5MM\001
 4 1 32 50 0 14 12 0.0000 4 120 210 8475 2850 D1\001
