@@ -1,5 +1,11 @@
 *** Changes since avr-libc-1.4.0:
 
+* Other changes:
+
+  - The simple demo has been modernized a bit.  Documentation now
+    generally refers to the ATmega8 rather than the AT90S2313, and
+    the #ifdef spaghetti has been moved out into iocompat.h.
+
 *** Changes in avr-libc-1.4.0:
 
 * Major API changes:
